--- a/kkn-216/src/pages/Home/Home.css
+++ b/kkn-216/src/pages/Home/Home.css
@@ -52,7 +52,7 @@
 
 .hero__badge {
   width: fit-content;
-  margin-bottom: var(--space-2);
+  margin-bottom: var(--space-6);
 }
 
 .hero__title {
